@@ -1,6 +1,11 @@
 devel
 -----
 
+* Make the reboot tracker catch failed coordinators, too. Previously the
+  reboot tracker was invoked only when a DB server failed or was restarted, 
+  and when a coordinator was restarted. Now it will also act if a coordinator
+  just fails (without restart).
+
 * Added scheduler thread creation/destruction metrics:
 
   - `arangodb_scheduler_threads_started`: Number of scheduler threads started
